force-app/main/default/objects/sumoapp__OAuthConnector__c/sumoapp__OAuthConnector__c.object-meta.xml
<CustomObject>
    <label>SUMO OAuth Connector</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>OAuth Connector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO OAuth Connectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>