force-app/main/default/objects/sumoapp__OAuthConnector__c/fields/sumoapp__AccessCode__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AccessCode__c</fullName>
    <label>Access Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>