force-app/main/default/objects/sumoapp__OAuthConnector__c/fields/sumoapp__AccessExpiresTime__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AccessExpiresTime__c</fullName>
    <label>Access Expires Time</label>
    <type>DateTime</type>
</CustomField>