force-app/main/default/objects/sumoapp__OAuthConnector__c/fields/sumoapp__AccessToken__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AccessToken__c</fullName>
    <label>Access Token</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>