force-app/main/default/objects/sumoapp__OAuthConnector__c/fields/sumoapp__ConnectorId__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ConnectorId__c</fullName>
    <externalId>true</externalId>
    <label>Connector Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>