force-app/main/default/objects/sumoapp__OAuthConnector__c/fields/sumoapp__License__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SUMO License</label>
    <referenceTo>sumoapp__CalendarLicense__c</referenceTo>
    <relationshipLabel>OAuth Connectors</relationshipLabel>
    <relationshipName>OAuthConnectors</relationshipName>
    <type>Lookup</type>
</CustomField>