force-app/main/default/objects/sumoapp__OAuthConnector__c/fields/sumoapp__RefreshToken__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RefreshToken__c</fullName>
    <label>Refresh Token</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>