force-app/main/default/objects/sumoapp__OAuthConnector__c/fields/sumoapp__Type__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZOOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>