force-app/main/default/objects/sumoapp__OAuthConnector__c/listViews/allSelection_OAuthConnector.listView-meta.xml
<ListView>
    <fullName>allSelection_OAuthConnector</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>